deployments/pathweb/workloads/home-network/ser2net-serial-zb01/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ser2net-serial-zb01
  namespace: home-network
spec:
  ports:
  - port: 20108
    targetPort: 20108
    name: serial-tcp
    protocol: TCP
  selector:
    app.kubernetes.io/name: ser2net-serial-zb01
