deployments/pathweb/workloads/home-network/ser2net-serial-zb01/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ser2net-serial-zb01-policy
  namespace: home-network
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ser2net-serial-zb01
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: zigbee2mqtt
    - matchLabels:
        app.kubernetes.io/name: home-assistant
    toPorts:
    - ports:
      - port: '20108'
        protocol: TCP
